...
                            </Text>
                        </Pressable>
                    )
                }
            />
            <Button
                testId="btn-upgrade-power"
                disabled={minerals < BigInt(getClickUpgradeCost(clickPower))}
                onPress={onUpgradePower}
                title={t("purchase.upgradePower", {
                    cost: formatNumber(getClickUpgradeCost(clickPower)),
                    power: clickPower,
                })}
...
                            : t("purchase.upgradeMinersLocked")
                    }
                />
            )}

            <Button
                testId="btn-buy-gem"
                onPress={onBuyGem}
                disabled={minerals < BigInt(gemMintCost)}
                title={t("purchase.buyGem", {
                    cost: formatNumber(gemMintCost),
                })}
            />
...
                        </Pressable>
                    )
                }
            />
            <Button
                tone="gem"
                testId="btn-buy-miner"
                onPress={onBuyMiner}
                disabled={gems < getMinerUpgradeCost(miners)}
                title={t("purchase.buyMiner", {
                    cost: formatNumber(getMinerUpgradeCost(miners)),
                    count: miners,
                    next: minerNext,
...
