...
  cloudSave: CloudSaveSettingsProps;
}) {
  const [exportedCode, setExportedCode] = useState<string | null>(null);
  const [importCode, setImportCode] = useState("");
  const t = useT();
  return (
    <View style={{ gap: 2, marginTop: 5 }} testID="save-view">
      <IntegerInput
        label={t("settings.autosave")}
        defaultValue={settingsData.autosave}
        onChangeValue={(newVal) =>
          onChangeSettingsData({
            ...settingsData,
...
