appId: com.minus4kelvin.minesofdoom
---
- launchApp: com.minus4kelvin.minesofdoom
- assertVisible:
    id: equation-display
- tapOn:
    id: menu-button
- assertVisible:
    id: menu-sheet
- tapOn:
    id: menu-tab-account
- assertVisible:
    id: account-section
- tapOn:
    id: account-signout
- assertVisible:
    id: account-register
